crates/memscribe-testkit/tests/snapshots/nodes__windsurf__v1__ban.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "ws-ban-003",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We will never add a dependency on left-pad. Implement padding inline instead.",
    "markers": [
      {
        "rule_id": "ban.negated_use",
        "category": "ban",
        "matched_text": "never add",
        "offset": 8
      },
      {
        "rule_id": "imperative.must_always_never",
        "category": "imperative",
        "matched_text": "never",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/windsurf/v1/ban.jsonl",
        "byte_offset": 164,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We will never add a dependency on left-pad.",
    "considered_options": [],
    "is_ban": true,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/util/pad.rs",
    "diff": {
      "path": "src/util/pad.rs",
      "old": "",
      "new": "pub fn pad_left(s: &str, width: usize) -> String { format!(\"{s:>width$}\") }",
      "unified": "@@ -0,0 +1,1 @@\n+pub fn pad_left(s: &str, width: usize) -> String { format!(\"{s:>width$}\") }",
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "77c0de01",
      "branch": "main"
    },
    "episode_id": "0067aa169c782405410ae6556b605a1ebc9612798d93f98d9cd9fc2a1b247592"
  },
  {
    "node": "binding",
    "from": "decision:ws-ban-003:1",
    "to": "episode:0067aa169c782405410ae6556b605a1ebc9612798d93f98d9cd9fc2a1b247592",
    "relation": "produced",
    "prov": {
      "used_session": "ws-ban-003",
      "used_decision": "decision:ws-ban-003:1",
      "was_generated_by_session": "ws-ban-003",
      "t_use": "2026-06-22T16:20:00Z",
      "t_gen": "2026-06-22T16:20:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
