crates/memscribe-testkit/tests/snapshots/nodes__windsurf__v1__interleaved_arcs.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "ws-interleaved-005",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres for the orders store. Update the connection module.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/windsurf/v1/interleaved_arcs.jsonl",
        "byte_offset": 172,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres for the orders store.",
    "considered_options": [
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T09:00:00Z"
  },
  {
    "node": "episode",
    "path": "src/db/mod.rs",
    "diff": {
      "path": "src/db/mod.rs",
      "old": "use mysql_async::Pool;",
      "new": "use postgres::Client;",
      "unified": "@@ -1,1 +1,1 @@\n-use mysql_async::Pool;\n+use postgres::Client;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "9a65631e5fe454bd1e5ed915512eb086e84dc7ee48207ff53fcd22cee0f28ec1"
  },
  {
    "node": "conversation",
    "session_id": "ws-interleaved-005",
    "turn_range": {
      "start": 6,
      "end": 7
    },
    "text": "Now switch to a bounded connection pool in the same db module instead of a single client.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "switch to",
        "offset": 4
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 62
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/windsurf/v1/interleaved_arcs.jsonl",
        "byte_offset": 973,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Now switch to a bounded connection pool in the same db module instead of a single client.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 6,
      "end": 7
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T09:05:00Z"
  },
  {
    "node": "decision",
    "epitome": "Re-editing the db module to use a bounded pool and adding a pool config.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 7,
      "end": 8
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T09:05:06Z",
    "decided_by": "cascade-base"
  },
  {
    "node": "episode",
    "path": "src/db/mod.rs",
    "diff": {
      "path": "src/db/mod.rs",
      "old": "use postgres::Client;",
      "new": "use deadpool_postgres::Pool;",
      "unified": "@@ -1,1 +1,1 @@\n-use postgres::Client;\n+use deadpool_postgres::Pool;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "9289a5389a026e4fb6f6a82cc75a4917a87dc177f90c6579d3029bde6242b31b"
  },
  {
    "node": "episode",
    "path": "src/db/pool.rs",
    "diff": {
      "path": "src/db/pool.rs",
      "old": "",
      "new": "pub struct PoolCfg { pub max: usize }",
      "unified": "@@ -0,0 +1,1 @@\n+pub struct PoolCfg { pub max: usize }",
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "1c18b8b452594de5894de4b02910d46c73c16ef98a18c64ba95d622c8b3a10d7"
  },
  {
    "node": "binding",
    "from": "decision:ws-interleaved-005:1",
    "to": "episode:9a65631e5fe454bd1e5ed915512eb086e84dc7ee48207ff53fcd22cee0f28ec1",
    "relation": "produced",
    "prov": {
      "used_session": "ws-interleaved-005",
      "used_decision": "decision:ws-interleaved-005:1",
      "was_generated_by_session": "ws-interleaved-005",
      "t_use": "2026-06-22T09:00:00Z",
      "t_gen": "2026-06-22T09:00:06Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  },
  {
    "node": "binding",
    "from": "decision:ws-interleaved-005:7",
    "to": "episode:1c18b8b452594de5894de4b02910d46c73c16ef98a18c64ba95d622c8b3a10d7",
    "relation": "produced",
    "prov": {
      "used_session": "ws-interleaved-005",
      "used_decision": "decision:ws-interleaved-005:7",
      "was_generated_by_session": "ws-interleaved-005",
      "t_use": "2026-06-22T09:05:06Z",
      "t_gen": "2026-06-22T09:05:06Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.5,
      "lift": 1.5,
      "phi": 0.5,
      "p": 0.386476
    }
  },
  {
    "node": "binding",
    "from": "decision:ws-interleaved-005:7",
    "to": "episode:9289a5389a026e4fb6f6a82cc75a4917a87dc177f90c6579d3029bde6242b31b",
    "relation": "produced",
    "prov": {
      "used_session": "ws-interleaved-005",
      "used_decision": "decision:ws-interleaved-005:7",
      "was_generated_by_session": "ws-interleaved-005",
      "t_use": "2026-06-22T09:05:06Z",
      "t_gen": "2026-06-22T09:05:06Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.5,
      "lift": 0.75,
      "phi": -0.5,
      "p": 0.386476
    }
  }
]
