crates/memscribe-testkit/tests/snapshots/nodes__windsurf__v1__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "ws-reject-002",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Should we use Redis or Memcached for the session cache?",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 10
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/windsurf/v1/rejected_alternative.jsonl",
        "byte_offset": 175,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Should we use Redis or Memcached for the session cache?",
    "considered_options": [
      {
        "text": "Redis",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "conversation",
    "session_id": "ws-reject-002",
    "turn_range": {
      "start": 3,
      "end": 4
    },
    "text": "Agreed, do not add Memcached. Wire up Redis.",
    "markers": [
      {
        "rule_id": "ban.negated_use",
        "category": "ban",
        "matched_text": "do not add",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/windsurf/v1/rejected_alternative.jsonl",
        "byte_offset": 640,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Agreed, do not add Memcached.",
    "considered_options": [],
    "is_ban": true,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 3,
      "end": 4
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/cache.rs",
    "diff": {
      "path": "src/cache.rs",
      "old": "// TODO: choose cache backend",
      "new": "let client = redis::Client::open(cfg.redis_url)?;",
      "unified": "@@ -1,1 +1,1 @@\n-// TODO: choose cache backend\n+let client = redis::Client::open(cfg.redis_url)?;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "1b2d44aa",
      "branch": "feature/cache"
    },
    "episode_id": "13a96ab757242797f8dd50af223260bbb9267d27980e7c1ee7dcaea74f169a85"
  },
  {
    "node": "binding",
    "from": "decision:ws-reject-002:3",
    "to": "episode:13a96ab757242797f8dd50af223260bbb9267d27980e7c1ee7dcaea74f169a85",
    "relation": "produced",
    "prov": {
      "used_session": "ws-reject-002",
      "used_decision": "decision:ws-reject-002:3",
      "was_generated_by_session": "ws-reject-002",
      "t_use": "2026-06-22T15:11:30Z",
      "t_gen": "2026-06-22T15:11:40Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
