crates/memscribe-testkit/tests/snapshots/nodes__windsurf__v1__tool_failure.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "ws-fail-004",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Update the read-only vendored file to bump the version.",
    "markers": [
      {
        "rule_id": "action.value_change",
        "category": "action_request",
        "matched_text": "bump",
        "offset": 38
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/windsurf/v1/tool_failure.jsonl",
        "byte_offset": 165,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Update the read-only vendored file to bump the version.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  }
]
